0.004
   - Work with changes in Message::Passing 0.006

0.003
   - Fix to use the correct ->_set_connected(0) API in the
     connection manager, so that upcoming reconnect features
     work as expected.

0.002
   - Fix input and output to be able to connect to a configureable
     queue or topic.

   - Fix documentation to be vagely useful

   - Note code is currently alpha quality

0.001_01
    - Initial version for smoking
